--- a/Sass/layouts/_section.scss
+++ b/Sass/layouts/_section.scss
@@ -8,9 +8,7 @@ body {
     
   }
   
-  
-
-  nav {
+nav {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -19,7 +17,7 @@ body {
 
   .main-container {
     width: 100%;
-    max-width: 320px;
+    max-width: 767.99px;
     box-sizing: border-box;
     height: 1600px;
   }
@@ -40,11 +38,9 @@ body {
     padding-bottom: 50px;
   }
 
-  
   .menus {
     background-color: #F2F4F4;
     padding-left: 10px;
-    
     padding-top: 30px;
     padding-bottom: 50px;
   }
@@ -64,15 +60,13 @@ body {
     -moz-border-radius: 20px 20px 0px 0px;
     -ms-border-radius: 20px 20px 0px 0px;
     -o-border-radius: 20px 20px 0px 0px;
-    object-fit: cover;
-    
+    object-fit: cover;   
   }
 
   .img-restaurant {
     width: 100%;
-    object-fit:cover;
+    object-fit:cover; 
   }
-  
   
   .image-txt {
       position: absolute;
@@ -93,7 +87,7 @@ body {
   }
 
   .carte {
-    width: 98%;
+    width: 100%;
   }
   
   .cartes {
@@ -103,7 +97,7 @@ body {
   }
   
   .carte-txt {
-  padding-top: 10px;
+    padding-top: 10px;
     padding-left: 10px;
     position: relative;
     padding-bottom: 10px;
@@ -142,11 +136,11 @@ body {
   
   .links {
     list-style : none;
-   padding-bottom : 10px;
-   width : 100%; 
-   text-align : start;
-   padding-left: 20px; 
-   width: 80%;
+    padding-bottom : 10px;
+    width : 100%; 
+    text-align : start;
+    padding-left: 20px; 
+    width: 80%;
   }
 
   
@@ -157,12 +151,12 @@ body {
     -moz-border-radius:25px 25px 0px 0px ;
     -ms-border-radius:25px 25px 0px 0px ;
     -o-border-radius:25px 25px 0px 0px ;
-    padding-left: 30px;
+    padding-left: 20px;
     position: relative;
-    width:97%;
+    width:100%;
     bottom: 30px;    
     z-index: 1;
-    height: 1300px;
+    padding-bottom: 30px;
     margin: 0;
     left: -5px;
     top: -70px;
@@ -175,17 +169,14 @@ body {
   }
 
   .enchantee {
-    width: 100%;
-    
+    width: 100%; 
   }
 
   .titre_lacarte_coeur {
     position: relative;
-  
     width: 95%;
   }
 
-  
   .titre_lacarte {
     font-family: "Shrikhand";
     font-size: 22px;
@@ -198,13 +189,11 @@ body {
     position: relative;
     padding-right: 0; 
     width: 100%;
-    padding-top: 20px;
-     
+    padding-top: 20px;  
   }
 
   .entrees, .plats, .desserts {
-    padding-bottom: 10px;
-    width: 100px;
+    gap: 12px; 
   }
 
   .subtitle_lacarte {
@@ -215,181 +204,150 @@ body {
     letter-spacing: 0em;
     text-align: left;
     border-bottom: 3px solid rgba(153, 226, 208, 1);
-    width: 40%;
+    width: 10%;
     height: 23px;
-    padding-top: 10px; 
-     
+    padding-top: 10px;     
   }
-
+  
   .menu {
-    border: 2px;
-    background-color: rgba(255, 255, 255, 1);
-    border-radius: 20px ;
-    -webkit-border-radius: 20px;
-    -moz-border-radius: 20px;
-    -ms-border-radius: 20px;
-    -o-border-radius: 20px;
-    margin: 0;
+    width: 349px;
+    height: 72px;
     padding: 15px;
-    position: relative;
-    padding-left: 10px;
-    width: 260px;
-    height: 30px;
-    left: -10px;
-    bottom: 55px;
-    opacity: 0; 
-     
-}
-
-.menu2 {
-  border: 2px;
-  background-color: rgba(255, 255, 255, 1);
-  border-radius: 20px ;
-  -webkit-border-radius: 20px;
-  -moz-border-radius: 20px;
-  -ms-border-radius: 20px;
-  -o-border-radius: 20px;
-  margin: 0;
-  padding: 15px;
-  position: relative;
-  padding-right: 10px;
-  padding-left: 10px;
-  width: 260px;
-  height: 30px;
-  opacity: 1;
-  left: -10px; 
-  
-}
-
-.menu2 :hover{
- opacity: 1;
- 
-  
-  
- 
- 
-}
-
-.menu :hover {
-  opacity: 1;
-  max-width: 170px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  transition-property: all;
- 
-  
-}
-
-.menu :active{
-  transform: scale(0.5, -1);
-  -webkit-transform: scale(0.5, -1);
-  -moz-transform: scale(0.5, -1);
-  -ms-transform: scale(0.5, -1);
-  -o-transform: scale(0.5, -1);
-}
-
-
-
-.titre_menus {    
-  font-size: 1em;
-  font-weight: 700;
-  line-height: 21px;
-  letter-spacing: 0em;
-  text-align: left;
-  margin: 0; 
-  width: 100%;
-  margin-top: 2px;
-  display: flex; 
-  
-}
-
-
-
-  .titre_menus2 {    
-    font-size: 1em;
-    font-weight: 700;
-    line-height: 21px;
-    letter-spacing: 0em;
-    text-align: left;
-    margin: 0; 
-    width: 100%;
-    margin-top: 2px;
-    display: flex;
-  }
-
-  
-
-  .subtitle_menus {   
-    font-size: 0.750em;
-    font-weight: 300;
-    line-height: 18px;
-    letter-spacing: 0em;
-    text-align: left;
-    margin: 0;
-    width: 100%;
-    display: flex;
-    
-    
-    
-
-    
-    
-  }
-
-  .subtitle_menus2 {   
-    font-size: 0.750em;
-    font-weight: 300;
-    line-height: 18px;
-    letter-spacing: 0em;
-    text-align: left;
-    margin: 0;
-    width: 100%;
-    display: flex;
-    
-    
-  }
-
-  
+    gap: 5px;
+    animation-name: menu-txt;
    
+    
+  }
+
+  
+  
+
+  .menuetprix {
+    width: 349px;
+    height: 69px;
+    background: rgba(255, 255, 255, 1);
+    border-radius: 15.04px;
+    -webkit-border-radius: 15.04px;
+    -moz-border-radius: 15.04px;
+    -ms-border-radius: 15.04px;
+    -o-border-radius: 15.04px;
+    box-shadow: 0px 4.011494159698486px 15.043103218078613px 0px rgba(0, 0, 0, 0.1);
+    display: flex;
+    justify-content: space-between;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    
+    
+  }
+
+  .menuetprix :hover .check {
+    width: 100px;
+    transform: translateX(0);
+ 
+}
+
+  .menu-txt {
+	  width: 287px;	 
+	  padding-left: 10px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    
+    
+	  
+}
+
+  .titre_menus { 
+    width: 100%;  
+     
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 21.09px;
+    color: black; 
+    
+    padding-top: 5px;
+    margin: 0;
+  }
+
+  .subtitle_menus {
+    width: 100%;
+       
+    font-size: 15.04px;
+    font-weight: 300;
+    line-height: 17.63px;
+    color: rgba(0, 0, 0, 1);
+    
+    
+  }
 
   .prix {
-    margin: 0;
-    font-weight: 700;
-    position: relative;
+    width: 27px;
+    height: 18px;    
+    transition: all;
+    -webkit-transition: all;
+    -moz-transition: all;
+    -ms-transition: all;
+    -o-transition: all;
+     padding-top: 27px;
+     margin-left: 10px;
+    display: flex;
     text-align: end;
-    position: absolute;       
-    left: 240px;
-    top: 35px;
+     
   }
 
-  .prix2 {
-    margin: 0;
+  .prix-txt {    
+    font-size: 15px;
     font-weight: 700;
-    position: relative;
-    text-align: end;
-    position: absolute;       
-    left: 210px;
-    top: 35px;
+    line-height: 18px;
+    letter-spacing: 0em;
+    text-align: center;
+    color: rgba(0, 0, 0, 1);
   }
 
- 
- 
-  .euros {
-    font-weight: 700;
+  .div-vert{
+    width:59px;
+    height:69px;
+    border-radius:0px,15px,15px,0px;
+    background-color: red;
+    color:#FFFFFF;    
+    position: absolute;    
+    transition: all 2s;
+    -webkit-transition: all 2s;
+    -moz-transition: all 2s;
+    -ms-transition: all 2s;
+    -o-transition: all 2s;
+    animation: fadein 2s;
+    -webkit-animation: fadein 2s;  
   }
+
+  .check {
+    width: 100px;
+    background-color:rgba(153, 226, 208, 1);
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    border-top-right-radius: 25%;
+    border-bottom-right-radius: 25%;
+    transform: translateX(100px);
+    transition: transform 2s;
+    -webkit-transform: translateX(100px);
+    -moz-transform: translateX(100px);
+    -ms-transform: translateX(100px);
+    -o-transform: translateX(100px);
+}
 
   .commander {
     padding-top: 15px;
     padding-bottom: 15px;
   }
 
-.carte {
-  display: flex;
-  flex-direction: column;
-  height: 220px;
-  background-color: white;
-  border-radius: 20px;
-  -webkit-filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
-}
+  .carte {
+    display: flex;
+    flex-direction: column;
+    height: 220px;
+    background-color: white;
+    border-radius: 20px;
+    -webkit-filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
+  }
 
