--- a/Sass/main.css
+++ b/Sass/main.css
@@ -10,7 +10,7 @@
 }
 
 .section-title {
-  width: 70%;
+  width: 100%;
   font-size: 2em;
   font-weight: 700;
   text-align: center;
@@ -55,6 +55,12 @@ a {
   width: 90%;
 }
 
+ul {
+  text-decoration: none;
+  padding: 0;
+  list-style-type: none;
+}
+
 .logo_footer {
   font-family: Shrikhand;
   font-size: 18px;
@@ -66,7 +72,7 @@ a {
   padding-left: 20px;
   color: rgb(255, 255, 255);
   margin-top: 0;
-  width: 95%;
+  width: 100%;
 }
 
 footer {
@@ -87,7 +93,7 @@ footer {
   padding-bottom: 10px;
   font-size: 18px;
   position: relative;
-  width: 95%;
+  width: 100%;
   top: -70px;
 }
 
@@ -124,14 +130,14 @@ footer {
   padding: 20px 0px;
   flex-direction: column;
   align-items: center;
-  width: 60%;
-  padding-left: 40px;
+  width: 100%;
+  padding-left: 50px;
 }
 
 .sub-title {
   text-align: center;
   font-weight: 300;
-  width: 95%;
+  width: 100%;
   font-size: 16px;
   padding-left: 10px;
   line-height: 21px;
@@ -163,7 +169,7 @@ nav {
 
 .main-container {
   width: 100%;
-  max-width: 320px;
+  max-width: 767.99px;
   box-sizing: border-box;
   height: 1600px;
 }
@@ -235,7 +241,7 @@ nav {
 }
 
 .carte {
-  width: 98%;
+  width: 100%;
 }
 
 .cartes {
@@ -295,12 +301,12 @@ b {
   -moz-border-radius: 25px 25px 0px 0px;
   -ms-border-radius: 25px 25px 0px 0px;
   -o-border-radius: 25px 25px 0px 0px;
-  padding-left: 30px;
+  padding-left: 20px;
   position: relative;
-  width: 97%;
+  width: 100%;
   bottom: 30px;
   z-index: 1;
-  height: 1300px;
+  padding-bottom: 30px;
   margin: 0;
   left: -5px;
   top: -70px;
@@ -336,8 +342,7 @@ b {
 }
 
 .entrees, .plats, .desserts {
-  padding-bottom: 10px;
-  width: 100px;
+  gap: 12px;
 }
 
 .subtitle_lacarte {
@@ -348,143 +353,120 @@ b {
   letter-spacing: 0em;
   text-align: left;
   border-bottom: 3px solid rgb(153, 226, 208);
-  width: 40%;
+  width: 10%;
   height: 23px;
   padding-top: 10px;
 }
 
 .menu {
-  border: 2px;
-  background-color: rgb(255, 255, 255);
-  border-radius: 20px;
-  -webkit-border-radius: 20px;
-  -moz-border-radius: 20px;
-  -ms-border-radius: 20px;
-  -o-border-radius: 20px;
-  margin: 0;
+  width: 349px;
+  height: 72px;
   padding: 15px;
-  position: relative;
-  padding-left: 10px;
-  width: 260px;
-  height: 30px;
-  left: -10px;
-  bottom: 55px;
-  opacity: 0;
-  overflow: hidden;
+  gap: 5px;
+  animation-name: menu-txt;
 }
 
-.menu2 {
-  border: 2px;
-  background-color: rgb(255, 255, 255);
-  border-radius: 20px;
-  -webkit-border-radius: 20px;
-  -moz-border-radius: 20px;
-  -ms-border-radius: 20px;
-  -o-border-radius: 20px;
-  margin: 0;
-  padding: 15px;
-  position: relative;
-  padding-right: 10px;
-  padding-left: 10px;
-  width: 260px;
-  height: 30px;
-  opacity: 1;
-  left: -10px;
-}
-
-.menu2 :hover {
-  opacity: 1;
-}
-
-.menu :hover {
-  opacity: 1;
-  max-width: 170px;
-  overflow: hidden;
+.menuetprix {
+  width: 349px;
+  height: 69px;
+  background: rgb(255, 255, 255);
+  border-radius: 15.04px;
+  -webkit-border-radius: 15.04px;
+  -moz-border-radius: 15.04px;
+  -ms-border-radius: 15.04px;
+  -o-border-radius: 15.04px;
+  box-shadow: 0px 4.0114941597px 15.0431032181px 0px rgba(0, 0, 0, 0.1);
+  display: flex;
+  justify-content: space-between;
   text-overflow: ellipsis;
+  overflow: hidden;
   white-space: nowrap;
-  transition-property: all;
-  display: -webkit-box;
-  -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;
-  animation-direction: alternate-reverse;
 }
 
-.menu :active {
-  transform: scale(0.5, -1);
-  -webkit-transform: scale(0.5, -1);
-  -moz-transform: scale(0.5, -1);
-  -ms-transform: scale(0.5, -1);
-  -o-transform: scale(0.5, -1);
+.menuetprix :hover .check {
+  width: 100px;
+  transform: translateX(0);
+}
+
+.menu-txt {
+  width: 287px;
+  padding-left: 10px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 .titre_menus {
-  font-size: 1em;
-  font-weight: 700;
-  line-height: 21px;
-  letter-spacing: 0em;
-  text-align: left;
-  margin: 0;
   width: 100%;
-  margin-top: 2px;
-  display: flex;
-}
-
-.titre_menus2 {
-  font-size: 1em;
-  font-weight: 700;
-  line-height: 21px;
-  letter-spacing: 0em;
-  text-align: left;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 21.09px;
+  color: black;
+  padding-top: 5px;
   margin: 0;
-  width: 100%;
-  margin-top: 2px;
-  display: flex;
 }
 
 .subtitle_menus {
-  font-size: 0.75em;
-  font-weight: 300;
-  line-height: 18px;
-  letter-spacing: 0em;
-  text-align: left;
-  margin: 0;
   width: 100%;
-  display: flex;
-}
-
-.subtitle_menus2 {
-  font-size: 0.75em;
+  font-size: 15.04px;
   font-weight: 300;
-  line-height: 18px;
-  letter-spacing: 0em;
-  text-align: left;
-  margin: 0;
-  width: 100%;
-  display: flex;
+  line-height: 17.63px;
+  color: rgb(0, 0, 0);
 }
 
 .prix {
-  margin: 0;
-  font-weight: 700;
-  position: relative;
+  width: 27px;
+  height: 18px;
+  transition: all;
+  -webkit-transition: all;
+  -moz-transition: all;
+  -ms-transition: all;
+  -o-transition: all;
+  padding-top: 27px;
+  margin-left: 10px;
+  display: flex;
   text-align: end;
-  position: absolute;
-  left: 240px;
-  top: 35px;
 }
 
-.prix2 {
-  margin: 0;
+.prix-txt {
+  font-size: 15px;
   font-weight: 700;
-  position: relative;
-  text-align: end;
-  position: absolute;
-  left: 210px;
-  top: 35px;
+  line-height: 18px;
+  letter-spacing: 0em;
+  text-align: center;
+  color: rgb(0, 0, 0);
 }
 
-.euros {
-  font-weight: 700;
+.div-vert {
+  width: 59px;
+  height: 69px;
+  border-radius: 0px, 15px, 15px, 0px;
+  background-color: red;
+  color: #FFFFFF;
+  position: absolute;
+  transition: all 2s;
+  -webkit-transition: all 2s;
+  -moz-transition: all 2s;
+  -ms-transition: all 2s;
+  -o-transition: all 2s;
+  animation: fadein 2s;
+  -webkit-animation: fadein 2s;
+}
+
+.check {
+  width: 100px;
+  background-color: rgb(153, 226, 208);
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  border-top-right-radius: 25%;
+  border-bottom-right-radius: 25%;
+  transform: translateX(100px);
+  transition: transform 2s;
+  -webkit-transform: translateX(100px);
+  -moz-transform: translateX(100px);
+  -ms-transform: translateX(100px);
+  -o-transform: translateX(100px);
 }
 
 .commander {
@@ -642,11 +624,6 @@ abbr {
 
 .coeur1 :hover {
   background: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  -moz-background-clip: text;
-  -moz-text-fill-color: transparent;
-  -webkit-text-stroke-color: transparent;
   transition-duration: 2s;
   transition-property: all;
 }
@@ -662,99 +639,31 @@ abbr {
 }
 
 .fa-check-circle {
-  padding-bottom: 0;
-  padding: 20px;
-  background-color: transparent;
+  width: 16px;
+  padding: 26px;
+  border-radius: 0px, 15px, 15px, 0px;
   color: #FFFFFF;
+  justify-content: center;
+  align-items: center;
   display: flex;
-  justify-content: center;
-  text-align: center;
-  z-index: 1;
-  opacity: 1;
-  position: absolute;
-  width: 15px;
-  height: 20px;
-  top: 1px;
-  left: 1%;
   border-top-right-radius: 25%;
   border-bottom-right-radius: 25%;
 }
 
-.double {
-  padding-bottom: 0;
-  padding: 20px;
-  background-color: transparent;
-  color: #FFFFFF;
-  display: flex;
-  justify-content: center;
-  text-align: center;
-  z-index: 1;
+.check :hover {
+  direction: ltr;
+  animation-direction: alternate-reverse;
+  transition: right 60s left 30s transform 30s;
+  animation-delay: 20s;
+  padding-left: 30px;
+  margin-right: 27px;
+  animation-timing-function: ease-in-out;
+  -webkit-transition: right 60s left 30s transform 30s;
+  -moz-transition: right 60s left 30s transform 30s;
+  -ms-transition: right 60s left 30s transform 30s;
+  -o-transition: right 60s left 30s transform 30s;
   opacity: 1;
-  position: absolute;
-  width: 15px;
-  height: 20px;
-  top: 1px;
-  left: 1%;
-  border-top-right-radius: 25%;
-  border-bottom-right-radius: 25%;
-}
-
-.div-vert {
-  padding-bottom: 0;
-  padding: 20px;
-  background-color: white;
-  color: #FFFFFF;
-  display: flex;
-  justify-content: center;
-  text-align: center;
-  z-index: 1;
-  opacity: 1;
-  position: absolute;
-  width: 15px;
-  height: 20px;
-  top: 1px;
-  left: 88%;
-  border-top-right-radius: 25%;
-  border-bottom-right-radius: 25%;
-  padding-right: 20px;
-  border: none;
-}
-
-.div-vert2 {
-  padding-bottom: 0;
-  padding: 20px;
-  background-color: rgb(153, 226, 208);
-  color: #FFFFFF;
-  justify-content: center;
-  text-align: center;
-  z-index: 1;
-  opacity: 0;
-  position: absolute;
-  width: 15px;
-  height: 20px;
-  bottom: 1px;
-  left: 86%;
-  border-top-right-radius: 25%;
-  border-bottom-right-radius: 25%;
-  padding-right: 20px;
-  border: none;
-}
-
-.div-vert :hover {
-  background-color: transparent;
-}
-
-.div-vert2 :hover {
-  opacity: 1;
-}
-
-.fa-check :hover {
-  opacity: 1;
-  transform: scale(2);
-  -webkit-transform: scale(2);
-  -moz-transform: scale(2);
-  -ms-transform: scale(2);
-  -o-transform: scale(2);
+  transition: all 10;
 }
 
 .fa-handshake-simple {
@@ -763,9 +672,6 @@ abbr {
   -moz-transform: rotate(-30deg);
   -ms-transform: rotate(-30deg);
   -o-transform: rotate(-30deg);
-  display: flex;
-  justify-content: center;
-  padding-top: 5px;
 }
 
 input {
