--- a/Sass/main.css
+++ b/Sass/main.css
@@ -363,11 +363,14 @@ b {
   height: 72px;
   padding: 15px;
   gap: 5px;
-  animation-name: menu-txt;
+}
+
+.menu :hover {
+  overflow: hidden;
 }
 
 .menuetprix {
-  width: 349px;
+  max-width: 349px;
   height: 69px;
   background: rgb(255, 255, 255);
   border-radius: 15.04px;
@@ -381,51 +384,132 @@ b {
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
+  animation-name: slidein;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
 }
 
-.menuetprix :hover .check {
-  width: 100px;
-  transform: translateX(0);
-}
-
-.menu-txt {
-  width: 287px;
-  padding-left: 10px;
-  text-overflow: ellipsis;
+.menuetprix :hover {
+  width: 210px;
   overflow: hidden;
-  white-space: nowrap;
+  transform: translateX(0px);
 }
 
-.titre_menus {
-  width: 100%;
-  font-size: 18px;
-  font-weight: 500;
-  line-height: 21.09px;
-  color: black;
-  padding-top: 5px;
-  margin: 0;
+.check {
+  width: 60px;
+  background-color: rgb(153, 226, 208);
+  position: relative;
+  padding: 15px;
+  right: 30px;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  border-top-right-radius: 25%;
+  border-bottom-right-radius: 25%;
+  overflow: hidden;
+  transform: translateX(60px);
+  transition: transform 2s;
+  -webkit-transform: translateX(60px);
+  -moz-transform: translateX(60px);
+  -ms-transform: translateX(60px);
+  -o-transform: translateX(60px);
+  animation-name: slidein;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
 }
 
-.subtitle_menus {
-  width: 100%;
-  font-size: 15.04px;
-  font-weight: 300;
-  line-height: 17.63px;
-  color: rgb(0, 0, 0);
+.check :hover {
+  width: 60px;
+  background-color: rgb(153, 226, 208);
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  border-top-right-radius: 25%;
+  border-bottom-right-radius: 25%;
+  overflow: hidden;
 }
 
 .prix {
   width: 27px;
   height: 18px;
+  margin-right: 2px;
+  padding-top: 27px;
+  position: relative;
+  right: 40px;
+  display: flex;
+  text-align: start;
+  transform: translateX(50px);
+  -webkit-transform: translateX(50px);
+  -moz-transform: translateX(50px);
+  -ms-transform: translateX(50px);
+  -o-transform: translateX(50px);
+  transition: transform 2s;
+  animation-name: slidein;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+}
+
+.prix :hover {
+  width: 27px;
+  height: 18px;
+  margin-right: 2px;
   transition: all;
   -webkit-transition: all;
   -moz-transition: all;
   -ms-transition: all;
   -o-transition: all;
   padding-top: 27px;
-  margin-left: 10px;
   display: flex;
   text-align: end;
+  transform: translateX(50px);
+  -webkit-transform: translateX(50px);
+  -moz-transform: translateX(50px);
+  -ms-transform: translateX(50px);
+  -o-transform: translateX(50px);
+  transition: transform 2s;
+}
+
+.menu-txt {
+  max-width: 287px;
+  padding-left: 10px;
+  text-overflow: ellipsis;
+  overflow: visible;
+  white-space: nowrap;
+}
+
+.titre_menus {
+  width: 287px;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 21.09px;
+  color: black;
+  padding-top: 5px;
+  margin: 0;
+  display: block;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  max-height: 1.6em;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
+.subtitle_menus {
+  width: 287px;
+  font-size: 15.04px;
+  font-weight: 300;
+  line-height: 17.63px;
+  color: rgb(0, 0, 0);
+  display: block;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  max-height: 2.4em;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .prix-txt {
@@ -435,38 +519,6 @@ b {
   letter-spacing: 0em;
   text-align: center;
   color: rgb(0, 0, 0);
-}
-
-.div-vert {
-  width: 59px;
-  height: 69px;
-  border-radius: 0px, 15px, 15px, 0px;
-  background-color: red;
-  color: #FFFFFF;
-  position: absolute;
-  transition: all 2s;
-  -webkit-transition: all 2s;
-  -moz-transition: all 2s;
-  -ms-transition: all 2s;
-  -o-transition: all 2s;
-  animation: fadein 2s;
-  -webkit-animation: fadein 2s;
-}
-
-.check {
-  width: 100px;
-  background-color: rgb(153, 226, 208);
-  justify-content: center;
-  align-items: center;
-  display: flex;
-  border-top-right-radius: 25%;
-  border-bottom-right-radius: 25%;
-  transform: translateX(100px);
-  transition: transform 2s;
-  -webkit-transform: translateX(100px);
-  -moz-transform: translateX(100px);
-  -ms-transform: translateX(100px);
-  -o-transform: translateX(100px);
 }
 
 .commander {
@@ -640,7 +692,7 @@ abbr {
 
 .fa-check-circle {
   width: 16px;
-  padding: 26px;
+  margin-right: 30px;
   border-radius: 0px, 15px, 15px, 0px;
   color: #FFFFFF;
   justify-content: center;
@@ -648,22 +700,7 @@ abbr {
   display: flex;
   border-top-right-radius: 25%;
   border-bottom-right-radius: 25%;
-}
-
-.check :hover {
-  direction: ltr;
-  animation-direction: alternate-reverse;
-  transition: right 60s left 30s transform 30s;
-  animation-delay: 20s;
-  padding-left: 30px;
-  margin-right: 27px;
-  animation-timing-function: ease-in-out;
-  -webkit-transition: right 60s left 30s transform 30s;
-  -moz-transition: right 60s left 30s transform 30s;
-  -ms-transition: right 60s left 30s transform 30s;
-  -o-transition: right 60s left 30s transform 30s;
-  opacity: 1;
-  transition: all 10;
+  overflow: hidden;
 }
 
 .fa-handshake-simple {
