--- a/Sass/components/_butons.scss
+++ b/Sass/components/_butons.scss
@@ -23,8 +23,8 @@
     -ms-border-radius: 25px;
     -o-border-radius: 25px;
     box-shadow: 0px 4px 10px 0px #00000040;
-    height: 50px;
-    width: 65%;
+    
+    width: 30%;
     align-items: center;
     margin-left: 60px;
     font-size: 16px;
@@ -37,22 +37,30 @@
     
 }
 
-.searchbutton :hover {
+.searchbutton a:hover {
   transition: 1s;
   -moz-transition: 1s;
   -o-transition: 1s;
   -htm-transition: 1s;
   -webkit-transition: 1s;
-  opacity: 0.8;
+  opacity: 1;
   -moz-opacity: 1;
   -khtml-opacity: 1;
-  box-shadow: 0px 10px 25px 0px #00000040;
-  
- 
+  -ms-transition: 1s;
+  filter:brightness(1.75);
+  -webkit-filter:brightness(1.75);
+  box-shadow:inset 0px 6px 15px 0px #fff;
 }
 
 .searchbutton a {
   color: #fff;
+  width: 100%;
+  padding: 15px;
+  border-radius: 25px;
+  -webkit-border-radius: 25px;
+  -moz-border-radius: 25px;
+  -ms-border-radius: 25px;
+  -o-border-radius: 25px;
 }
   
 
