--- a/Sass/main.css
+++ b/Sass/main.css
@@ -385,7 +385,7 @@ b {
   overflow: hidden;
   white-space: nowrap;
   animation-name: slidein;
-  animation-duration: 3s;
+  animation-duration: 30s;
   animation-iteration-count: infinite;
   animation-direction: alternate;
 }
@@ -564,8 +564,7 @@ b {
   -ms-border-radius: 25px;
   -o-border-radius: 25px;
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.2509803922);
-  height: 50px;
-  width: 65%;
+  width: 30%;
   align-items: center;
   margin-left: 60px;
   font-size: 16px;
@@ -575,20 +574,30 @@ b {
   border: none;
 }
 
-.searchbutton :hover {
+.searchbutton a:hover {
   transition: 1s;
   -moz-transition: 1s;
   -o-transition: 1s;
   -htm-transition: 1s;
   -webkit-transition: 1s;
-  opacity: 0.8;
+  opacity: 1;
   -moz-opacity: 1;
   -khtml-opacity: 1;
-  box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.2509803922);
+  -ms-transition: 1s;
+  filter: brightness(1.75);
+  -webkit-filter: brightness(1.75);
+  box-shadow: inset 0px 6px 15px 0px #fff;
 }
 
 .searchbutton a {
   color: #fff;
+  width: 100%;
+  padding: 15px;
+  border-radius: 25px;
+  -webkit-border-radius: 25px;
+  -moz-border-radius: 25px;
+  -ms-border-radius: 25px;
+  -o-border-radius: 25px;
 }
 
 .fa-location-dot {
