--- a/Sass/components/_butons.scss
+++ b/Sass/components/_butons.scss
@@ -22,8 +22,7 @@
     -moz-border-radius: 25px;
     -ms-border-radius: 25px;
     -o-border-radius: 25px;
-    box-shadow: 0px 4px 10px 0px #00000040;
-    
+    box-shadow: 0px 4px 10px 0px #00000040;    
     width: 30%;
     align-items: center;
     margin-left: 60px;
@@ -38,18 +37,16 @@
 }
 
 .searchbutton a:hover {
-  transition: 1s;
-  -moz-transition: 1s;
-  -o-transition: 1s;
-  -htm-transition: 1s;
-  -webkit-transition: 1s;
-  opacity: 1;
-  -moz-opacity: 1;
-  -khtml-opacity: 1;
-  -ms-transition: 1s;
+  transition:all 2s;
+  -moz-transition:all 2s;
+  -o-transition:all 2s;
+  -htm-transition:all 2s;
+  -webkit-transition:all 2s;
+  -ms-transition:all 2s;
   filter:brightness(1.75);
   -webkit-filter:brightness(1.75);
   box-shadow:inset 0px 6px 15px 0px #fff;
+  transition: transform 330ms ease-in-out;
 }
 
 .searchbutton a {
