--- a/Sass/base/_animations.scss
+++ b/Sass/base/_animations.scss
@@ -1,31 +1,21 @@
-@keyframes anim {
+@keyframes animation-translateX {
     
-        0% {
-          
-          left: 0px;
-          top: 0px;
-        }
-        25% {
-         
-          left: 200px;
-          top: 0px;
-        }
-        50% {
-          
-          left: 200px;
-          top: 200px;
-        }
-        75% {
-            
-            left: 0px;
-            top: 200px;
-          }
-          100% {
-            
-            left: 0px;
-            top: 0px;
-          }
-        }
+  
+    0% {
+        transform: translateX(0);
+        -webkit-transform: translateX(0);
+        -moz-transform: translateX(0);
+        -ms-transform: translateX(0);
+        -o-transform: translateX(0);
+}
+    100% {
+        transform: translateX(1);
+        -webkit-transform: translateX(1);
+        -moz-transform: translateX(1);
+        -ms-transform: translateX(1);
+        -o-transform: translateX(1);
+}
+}
 
 @keyframes slidein {
     from {
@@ -40,7 +30,7 @@
     }
         
 
-@keyframes prix {
+@keyframes direction {
     0% {
           
         left: 0px;
