--- a/Sass/main.css
+++ b/Sass/main.css
@@ -384,32 +384,30 @@ b {
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
-  animation-name: slidein;
   animation-duration: 10s;
   animation-iteration-count: infinite;
-  animation-direction: alternate;
-  transition: all 10s;
-  animation-direction: reverse;
-  -webkit-transition: all 10s;
-  -moz-transition: all 10s;
-  -ms-transition: all 10s;
-  -o-transition: all 10s;
+  animation-direction: alternate-reverse ease;
+  transform-origin: right;
+  animation-delay: 3000ms;
+  animation-name: direction;
+  animation-name: translateX;
 }
 
 .menuetprix :hover {
-  width: 210px;
+  width: 240px;
   overflow: hidden;
-  transform: translateX(0px);
-  animation-name: slidein;
+  transform: translateX(0px) ease;
   animation-duration: 10s;
   animation-iteration-count: infinite;
-  animation-direction: alternate;
-  transition: all 10s;
-  animation-direction: reverse;
-  -webkit-transition: all 10s;
-  -moz-transition: all 10s;
-  -ms-transition: all 10s;
-  -o-transition: all 10s;
+  animation-direction: alternate-reverse ease;
+  transform-origin: right;
+  animation-delay: 3000ms;
+  animation-name: direction;
+  animation-name: translateX;
+  -webkit-transform: translateX(0px);
+  -moz-transform: translateX(0px);
+  -ms-transform: translateX(0px);
+  -o-transform: translateX(0px);
 }
 
 .check {
@@ -425,21 +423,16 @@ b {
   border-bottom-right-radius: 25%;
   overflow: hidden;
   transform: translateX(60px);
-  transition: transform 2s;
   -webkit-transform: translateX(60px);
   -moz-transform: translateX(60px);
   -ms-transform: translateX(60px);
   -o-transform: translateX(60px);
-  animation-name: slidein;
   animation-duration: 10s;
   animation-iteration-count: infinite;
-  animation-direction: alternate;
-  transition: all 10s;
-  animation-direction: reverse;
-  -webkit-transition: all 10s;
-  -moz-transition: all 10s;
-  -ms-transition: all 10s;
-  -o-transition: all 10s;
+  animation-direction: alternate-reverse ease;
+  animation-delay: 3000ms;
+  animation-name: direction;
+  animation-name: translateX;
 }
 
 .check :hover {
@@ -451,16 +444,18 @@ b {
   border-top-right-radius: 25%;
   border-bottom-right-radius: 25%;
   overflow: hidden;
-  animation-name: slidein;
   animation-duration: 10s;
   animation-iteration-count: infinite;
-  animation-direction: alternate;
-  transition: all 10s;
-  animation-direction: reverse;
-  -webkit-transition: all 10s;
-  -moz-transition: all 10s;
-  -ms-transition: all 10s;
-  -o-transition: all 10s;
+  animation-direction: alternate-reverse ease;
+  animation-fill-mode: forwards;
+  animation-delay: 3000ms;
+  animation-name: direction;
+  animation-name: translateX;
+  transition: all 3000ms;
+  -webkit-transition: all 3000ms;
+  -moz-transition: all 3000ms;
+  -ms-transition: all 3000ms;
+  -o-transition: all 3000ms;
 }
 
 .prix {
@@ -477,28 +472,18 @@ b {
   -moz-transform: translateX(50px);
   -ms-transform: translateX(50px);
   -o-transform: translateX(50px);
-  transition: transform 2s;
-  animation-name: slidein;
   animation-duration: 10s;
   animation-iteration-count: infinite;
-  animation-direction: alternate;
-  transition: all 10s;
-  animation-direction: reverse;
-  -webkit-transition: all 10s;
-  -moz-transition: all 10s;
-  -ms-transition: all 10s;
-  -o-transition: all 10s;
+  animation-direction: alternate-reverse ease;
+  animation-delay: 3000ms;
+  animation-name: direction;
+  animation-name: translateX;
 }
 
 .prix :hover {
   width: 27px;
   height: 18px;
   margin-right: 2px;
-  transition: all;
-  -webkit-transition: all;
-  -moz-transition: all;
-  -ms-transition: all;
-  -o-transition: all;
   padding-top: 27px;
   display: flex;
   text-align: end;
@@ -507,17 +492,13 @@ b {
   -moz-transform: translateX(50px);
   -ms-transform: translateX(50px);
   -o-transform: translateX(50px);
-  transition: transform 2s;
-  animation-name: slidein;
   animation-duration: 10s;
   animation-iteration-count: infinite;
-  animation-direction: alternate;
+  animation-direction: alternate-reverse ease;
   transition: all 10s;
-  animation-direction: reverse;
-  -webkit-transition: all 10s;
-  -moz-transition: all 10s;
-  -ms-transition: all 10s;
-  -o-transition: all 10s;
+  animation-delay: 3000ms;
+  animation-name: direction;
+  animation-name: translateX;
 }
 
 .menu-txt {
@@ -623,27 +604,22 @@ b {
 }
 
 .searchbutton a:hover {
-  transition: all 2s;
-  -moz-transition: all 2s;
-  -o-transition: all 2s;
-  -htm-transition: all 2s;
-  -webkit-transition: all 2s;
-  -ms-transition: all 2s;
+  transition-property: all 2s;
   filter: brightness(1.75);
   -webkit-filter: brightness(1.75);
-  box-shadow: inset 0px 6px 15px 0px #fff;
-  transition: transform 330ms ease-in-out;
+  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.2509803922);
+  opacity: 0.8;
 }
 
 .searchbutton a {
   color: #fff;
   width: 100%;
   padding: 15px;
-  border-radius: 25px;
-  -webkit-border-radius: 25px;
-  -moz-border-radius: 25px;
-  -ms-border-radius: 25px;
-  -o-border-radius: 25px;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
 }
 
 .fa-location-dot {
@@ -732,11 +708,15 @@ abbr {
   -moz-border-radius: 50%;
   -ms-border-radius: 50%;
   -o-border-radius: 50%;
+  animation-name: direction;
+  animation-direction: alternate-reverse;
 }
 
 .fa-heart::before {
   font-weight: bold;
   transition: color 1s ease-out;
+  animation-name: direction;
+  animation-direction: alternate-reverse;
 }
 
 .fa-heart:hover::before {
@@ -744,6 +724,8 @@ abbr {
           background-clip: text;
   color: transparent;
   background-image: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
+  animation-name: direction;
+  animation-direction: alternate-reverse;
 }
 
 .fa-left-long {
