--- a/Sass/main.css
+++ b/Sass/main.css
@@ -397,7 +397,7 @@ b {
   width: 240px;
   overflow: hidden;
   transform: translateX(0px) ease;
-  animation-duration: 10s;
+  animation-duration: 30s;
   animation-iteration-count: infinite;
   animation-direction: alternate-reverse ease;
   transform-origin: right;
@@ -427,7 +427,7 @@ b {
   -moz-transform: translateX(60px);
   -ms-transform: translateX(60px);
   -o-transform: translateX(60px);
-  animation-duration: 10s;
+  animation-duration: 30s;
   animation-iteration-count: infinite;
   animation-direction: alternate-reverse ease;
   animation-delay: 3000ms;
@@ -444,7 +444,7 @@ b {
   border-top-right-radius: 25%;
   border-bottom-right-radius: 25%;
   overflow: hidden;
-  animation-duration: 10s;
+  animation-duration: 60s;
   animation-iteration-count: infinite;
   animation-direction: alternate-reverse ease;
   animation-fill-mode: forwards;
@@ -472,7 +472,7 @@ b {
   -moz-transform: translateX(50px);
   -ms-transform: translateX(50px);
   -o-transform: translateX(50px);
-  animation-duration: 10s;
+  animation-duration: 30s;
   animation-iteration-count: infinite;
   animation-direction: alternate-reverse ease;
   animation-delay: 3000ms;
@@ -492,13 +492,17 @@ b {
   -moz-transform: translateX(50px);
   -ms-transform: translateX(50px);
   -o-transform: translateX(50px);
-  animation-duration: 10s;
+  animation-duration: 30s;
   animation-iteration-count: infinite;
   animation-direction: alternate-reverse ease;
-  transition: all 10s;
+  transition: all 30s;
   animation-delay: 3000ms;
   animation-name: direction;
   animation-name: translateX;
+  -webkit-transition: all 30s;
+  -moz-transition: all 30s;
+  -ms-transition: all 30s;
+  -o-transition: all 30s;
 }
 
 .menu-txt {
